syntax = "proto3";

package productcommunication;

service EnrollWithProduct {
  rpc CheckClass(CheckClassRequest) returns (CheckResponse) {};
  rpc CheckCourse(CheckCourseRequest) returns (CheckResponse) {};
}

message CheckClassRequest {
  int64 class_id = 1;
};

message CheckCourseRequest {
  int64 course_id = 1;
};

message CheckResponse {
  bool is_valid = 1;
};